Refactor classe Employe vers classe abstraite Personnel + refactor toutes les classes

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "App\\" : "src"
         }
     },
-    "require": {}
+    "require": {
+        "symfony/var-dumper": "^6.3",
+        "league/csv": "^9.11"
+    }
 }
